# OpenGLSL

./: CMakeLists.txt  main.cpp
Chapter1/: CMakeLists.txt
Chapter1/include/: windowcreation.h
Chapter1/src/: windowcreation.cpp
libs/build_glfw/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/build_glfw/docs/: Doxyfile  Makefile  cmake_install.cmake  warnings.txt
libs/build_glfw/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_8daac8d80174c3c2bda04ac826a4ad1b.html  dir_ba65fa1a825da90904e40408085adac9.html  dir_dcbd26bb56a8c6682c7e5a2579bdd00d.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  (+25 more)
libs/build_glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  wave  windows
libs/build_glfw/src/: Makefile  cmake_install.cmake
libs/build_glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  reopen  tearing  threads  timeout  title  triangle-vulkan  window
(+1 files in other folders)
